<resources>
    <string name="app_name">Quizapp</string>
    <string name="title_activity_jogo">Quizapp</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Ranking</string>
    <string name="title_settings">Settings</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello">Hello</string>
    <string name="main_conexao">There is no Internet Connection</string>
    <string name="register_confirm_password">Passwords do not match</string>
    <string name="register_confirm">Successfully registered</string>
    <string name="register_fail">Registration failed</string>
    <string name="jogo_question_skiped">"Question skipped "</string>
    <string name="jogo_points">Points</string>
    <string name="jogo_end_time">End of time</string>
    <string name="jogo_saved_questions">No saved questions</string>
    <string name="jogo_correct_answer">Correct Answer </string>
    <string name="jogo_incorrect_answer">Incorrect Answer </string>
    <string name="jogo_skip_question">Skip question and answer later</string>
    <string name="settings_easy">Easy</string>
    <string name="settings_medium">Medium</string>
    <string name="settings_hard">Hard</string>
    <string name="settings_selected">Selected</string>
    <string name="settings_select_difficulty">Select a difficulty</string>
    <string name="settings_play">Play</string>
    <string name="settings_random">Random Mode</string>
    <string name="login_login">Login</string>
    <string name="login_register">Register</string>
    <string name="register_register">Register</string>
    <string name="deletar">Delete</string>
    <string name="editar">Edit</string>
    <string name="register_name">Name</string>
    <string name="register_password">Password</string>
    <string name="register_email">Email</string>
    <string name="register_password_confirm">Confirm Password</string>
    <string name="menu_select">Select a option</string>
    <string name="menu_next_question">Next Question</string>
    <string name="menu_answer_local">Answer saved question</string>
    <string name="menu_logout">Logout</string>
    <string name="menu_ranking">Ranking</string>
    <string name="menu_settings">Settings</string>
    <string name="main_welcome">WELCOME</string>
    <string name="login_name">Name</string>
    <string name="login_password">Password</string>
    <string name="jogo_title">GAME</string>
    <string name="register_title">REGISTER</string>
    <string name="login_title">LOGIN</string>
    <string name="ranking_title">RANKING</string>
    <string name="itens_ranking_pontos">POINTS</string>
    <string name="itens_ultima_vez">LAST PLAYED</string>
    <string name="itens_vezes_jogada">QUANTITY PLAYED</string>
    <string name="main_developers">Developed by: Quizzz</string>
    <string name="select_menu">Choose an option</string>
    <string name="new_question">New Question</string>
    <string name="tip">Tip</string>
    <string name="create_question">Create Question</string>
    <string name="create_category">Create Category</string>
    <string name="edit_question">Edit Question</string>
    <string name="edit_category">Edit Category</string>
    <string name="admin">Admin</string>
    <string name="question_title">Question title</string>
    <string name="answer_correct">Correct Answer</string>
    <string name="answer">Answer</string>
    <string name="new_category">New category</string>
    <string name="create_dificuldade">Create Difficulty</string>
    <string name="edit_dificuldade">Edit Difficulty</string>
    <string name="title_categoria">Category</string>
    <string name="title_dificuldade">Difficulty</string>
    <string name="confirm">Confirm</string>
    <string name="edit_profile">Edit profile</string>
    <string name="image">Image</string>
    <string name="update">Update</string>
    <string name="delete">Delete</string>
</resources>
