<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
                                                   xmlns:app="http://schemas.android.com/apk/res-auto"
                                                   xmlns:tools="http://schemas.android.com/tools"
                                                   android:layout_width="match_parent"
                                                   android:layout_height="match_parent"
                                                   tools:context=".MenuFragment"
                                                   android:background="@drawable/padrao_layout_telas">

    <!-- TODO: Update blank fragment layout -->

    <Button
            android:text="@string/edit_dificuldade"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:id="@+id/btEditDificuldade"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="32dp"
            android:layout_marginRight="32dp"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginLeft="32dp"
            android:layout_marginStart="32dp"
            app:layout_constraintHorizontal_bias="0.0"
            android:background="@drawable/roundedbutton"
            android:textColor="@android:color/background_light"
            android:textStyle="bold"
            android:textSize="24sp"
            app:layout_constraintTop_toBottomOf="@+id/btCreateDificuldade"
            android:layout_marginTop="24dp" />

    <Button
            android:text="@string/create_dificuldade"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:id="@+id/btCreateDificuldade"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginLeft="32dp"
            android:layout_marginStart="32dp"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="32dp"
            android:layout_marginRight="32dp"
            app:layout_constraintHorizontal_bias="0.0"
            android:background="@drawable/roundedbutton"
            android:textColor="@android:color/background_light"
            android:textStyle="bold"
            android:textSize="24sp"
            app:layout_constraintTop_toBottomOf="@+id/btEditCategory"
            android:layout_marginTop="52dp" />

    <TextView
            android:text="@string/admin"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:id="@+id/txtViewx"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginLeft="20dp"
            android:layout_marginStart="20dp"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="20dp"
            android:layout_marginRight="20dp"
            app:layout_constraintHorizontal_bias="0.0"
            android:textSize="30sp"
            android:gravity="center"
            android:textColor="@android:color/background_light"
            android:textStyle="bold"
            android:layout_marginTop="20dp"
            tools:ignore="TextContrastCheck" />

    <Button
            android:text="@string/create_question"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:id="@+id/btCreateQuestion"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="32dp"
            android:layout_marginRight="32dp"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginLeft="32dp"
            android:layout_marginStart="32dp"
            app:layout_constraintHorizontal_bias="0.0"
            android:background="@drawable/roundedbutton"
            android:textColor="@android:color/background_light"
            android:textStyle="bold"
            android:textSize="24sp"
            app:layout_constraintTop_toBottomOf="@+id/txtViewx"
            android:layout_marginTop="50dp" />

    <Button
            android:text="@string/edit_question"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:id="@+id/btEditQuestion"
            android:layout_marginTop="32dp"
            app:layout_constraintTop_toBottomOf="@+id/btCreateQuestion"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="32dp"
            android:layout_marginRight="32dp"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginLeft="32dp"
            android:layout_marginStart="32dp"
            app:layout_constraintHorizontal_bias="0.0"
            android:background="@drawable/roundedbutton"
            android:textColor="@android:color/background_light"
            android:textStyle="bold"
            android:textSize="24sp"
            tools:ignore="TextContrastCheck" />

    <Button
            android:text="@string/create_category"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:id="@+id/btCreateCategory"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginLeft="32dp"
            android:layout_marginStart="32dp"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="32dp"
            android:layout_marginRight="32dp"
            app:layout_constraintHorizontal_bias="0.0"
            android:layout_marginTop="50dp"
            app:layout_constraintTop_toBottomOf="@+id/btEditQuestion"
            android:background="@drawable/roundedbutton"
            android:textColor="@android:color/background_light"
            android:textStyle="bold"
            android:textSize="24sp" />

    <Button
            android:text="@string/edit_category"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:id="@+id/btEditCategory"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="32dp"
            android:layout_marginRight="32dp"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginLeft="32dp"
            android:layout_marginStart="32dp"
            app:layout_constraintHorizontal_bias="0.0"
            android:layout_marginTop="32dp"
            app:layout_constraintTop_toBottomOf="@+id/btCreateCategory"
            android:background="@drawable/roundedbutton"
            android:textColor="@android:color/background_light"
            android:textStyle="bold"
            android:textSize="24sp" />

</androidx.constraintlayout.widget.ConstraintLayout>