<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/padrao_layout_telas">

    <TextView
            android:text="@string/edit_category"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/textView15"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:layout_marginTop="20dp"
            android:layout_marginLeft="20dp"
            android:layout_marginStart="20dp"
            android:layout_marginRight="20dp"
            android:layout_marginEnd="20dp"
            android:textSize="30sp"
            android:textColor="#FFFFFF"
            android:textStyle="bold"
            tools:ignore="TextContrastCheck" />

    <ScrollView
            android:layout_width="0dp"
            android:layout_height="0dp"
            app:layout_constraintTop_toBottomOf="@+id/textView15"
            android:layout_marginTop="10dp"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginLeft="20dp"
            android:layout_marginStart="20dp"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginRight="20dp"
            android:layout_marginEnd="20dp"
            app:layout_constraintBottom_toTopOf="@+id/btConfirm"
            android:layout_marginBottom="10dp">

        <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

            <ImageView
                    android:layout_width="100dp"
                    android:layout_height="100dp"
                    tools:srcCompat="@tools:sample/avatars"
                    android:id="@+id/imageProfile"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    tools:ignore="ImageContrastCheck"
                    android:contentDescription="@string/edit_profile" />

            <EditText
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:inputType="textPersonName"
                    android:ems="10"
                    android:drawableLeft="@drawable/ic_person_black_24dp"
                    android:id="@+id/txtEditNome"
                    android:hint="@string/register_name"
                    android:textColor="@android:color/background_light"
                    android:drawablePadding="10dp"
                    android:minHeight="48dp"
                    tools:ignore="TextContrastCheck"
                    android:importantForAutofill="no"
                    android:drawableStart="@drawable/ic_person_black_24dp"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/imageProfile"
                    android:layout_marginTop="32dp" />

            <EditText
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:inputType="textEmailAddress"
                    android:ems="10"
                    android:id="@+id/txtEditEmail"
                    android:drawableLeft="@drawable/ic_email_black_24dp"
                    android:hint="@string/register_email"
                    android:textColor="@android:color/background_light"
                    android:drawablePadding="10dp"
                    android:minHeight="48dp"
                    tools:ignore="TextContrastCheck"
                    android:importantForAutofill="no"
                    android:drawableStart="@drawable/ic_email_black_24dp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/txtEditNome"
                    app:layout_constraintBottom_toBottomOf="parent"
                    android:layout_marginTop="16dp"
                    android:layout_marginBottom="10dp" />

        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>

    <Button
            android:text="@string/confirm"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:id="@+id/btConfirm"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            android:layout_marginBottom="10dp"
            android:layout_marginLeft="20dp"
            android:layout_marginStart="20dp"
            android:layout_marginRight="20dp"
            android:layout_marginEnd="20dp"
            android:textColor="#FFFFFF"
            android:textStyle="bold"
            android:background="@drawable/roundedbutton" />

</androidx.constraintlayout.widget.ConstraintLayout>