<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
                                                   xmlns:app="http://schemas.android.com/apk/res-auto"
                                                   xmlns:tools="http://schemas.android.com/tools"
                                                   android:layout_width="match_parent"
                                                   android:layout_height="match_parent"
                                                   tools:context=".MenuFragment"
                                                   android:background="@drawable/padrao_layout_telas">

    <!-- TODO: Update blank fragment layout -->
    <TextView
            android:text="@string/select_menu"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:id="@+id/txtViewx"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginLeft="20dp"
            android:layout_marginStart="20dp"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="20dp"
            android:layout_marginRight="20dp"
            app:layout_constraintHorizontal_bias="0.0"
            android:textSize="30sp"
            android:gravity="center"
            android:textColor="@android:color/background_light"
            android:textStyle="bold"
            android:layout_marginTop="20dp" />

    <ImageView
            android:layout_width="wrap_content"
            android:layout_height="100dp"
            tools:src="@tools:sample/avatars"
            android:id="@+id/profilePicture"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginLeft="32dp"
            android:layout_marginStart="32dp"
            app:layout_constraintTop_toBottomOf="@+id/txtViewx"
            android:layout_marginTop="32dp"
            tools:srcCompat="@tools:sample/avatars" />

    <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/txtUserName"
            app:layout_constraintStart_toEndOf="@+id/profilePicture"
            app:layout_constraintTop_toBottomOf="@+id/textView13"
            android:layout_marginLeft="20dp"
            android:layout_marginStart="20dp"
            android:textSize="24sp"
            android:textColor="@android:color/background_light" />

    <TextView
            android:layout_width="138dp"
            android:layout_height="34dp"
            android:id="@+id/textView13"
            app:layout_constraintStart_toEndOf="@+id/profilePicture"
            android:layout_marginLeft="20dp"
            android:layout_marginStart="20dp"
            app:layout_constraintTop_toBottomOf="@+id/txtViewx"
            android:layout_marginTop="32dp"
            android:text="@string/hello"
            android:textSize="18sp"
            android:textColor="@android:color/background_light" />

    <Button
            android:text="@string/menu_next_question"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:id="@+id/btProxJogo"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="32dp"
            android:layout_marginRight="32dp"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginLeft="32dp"
            android:layout_marginStart="32dp"
            app:layout_constraintHorizontal_bias="0.0"
            android:background="@drawable/roundedbutton"
            android:textColor="@android:color/background_light"
            android:textStyle="bold"
            android:textSize="24sp"
            app:layout_constraintTop_toBottomOf="@+id/profilePicture"
            android:layout_marginTop="32dp" />
    <Button
            android:text="@string/menu_answer_local"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:id="@+id/btResponderLocal"
            android:layout_marginTop="32dp"
            app:layout_constraintTop_toBottomOf="@+id/btProxJogo" app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="32dp" android:layout_marginRight="32dp"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginLeft="32dp"
            android:layout_marginStart="32dp" app:layout_constraintHorizontal_bias="0.0"
            android:background="@drawable/roundedbutton" android:textColor="@android:color/background_light"
            android:textStyle="bold" android:textSize="24sp"/>

    <Button
            android:text="@string/menu_ranking"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:id="@+id/btRanking"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginLeft="32dp" android:layout_marginStart="32dp" app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="32dp" android:layout_marginRight="32dp"
            app:layout_constraintHorizontal_bias="0.0" android:layout_marginTop="32dp"
            app:layout_constraintTop_toBottomOf="@+id/btResponderLocal" android:background="@drawable/roundedbutton"
            android:textColor="@android:color/background_light" android:textStyle="bold" android:textSize="24sp"/>
    <Button
            android:text="@string/menu_settings"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:id="@+id/btSettings"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="32dp" android:layout_marginRight="32dp"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginLeft="32dp"
            android:layout_marginStart="32dp" app:layout_constraintHorizontal_bias="0.0"
            android:layout_marginTop="32dp" app:layout_constraintTop_toBottomOf="@+id/btRanking"
            android:background="@drawable/roundedbutton" android:textColor="@android:color/background_light"
            android:textStyle="bold" android:textSize="24sp"/>

    <Button
            android:text="ADMIN"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:id="@+id/btAdmin"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="32dp"
            android:layout_marginRight="32dp"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginLeft="32dp"
            android:layout_marginStart="32dp"
            app:layout_constraintHorizontal_bias="0.0"
            android:background="@drawable/button_admin"
            android:textColor="@android:color/background_light"
            android:textStyle="bold"
            android:textSize="24sp"
            app:layout_constraintBottom_toTopOf="@+id/btLogout"
            android:layout_marginBottom="32dp" />

    <Button
            android:text="@string/menu_logout"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:id="@+id/btLogout"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="32dp"
            android:layout_marginRight="32dp"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginLeft="32dp"
            android:layout_marginStart="32dp"
            app:layout_constraintHorizontal_bias="0.0"
            android:background="@drawable/button_logout"
            android:textColor="@android:color/background_light"
            android:textStyle="bold"
            android:textSize="24sp"
            app:layout_constraintBottom_toBottomOf="parent"
            android:layout_marginBottom="20dp" />

</androidx.constraintlayout.widget.ConstraintLayout>