<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".LoginFragment" android:background="@drawable/roundedbutton">

    <Button
            android:text="@string/login_login"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:id="@+id/btLogin"
            android:drawableLeft="@drawable/ic_send_black_24dp"
            android:background="@drawable/roundedbutton"
            android:textColor="@android:color/background_light"
            app:layout_constraintTop_toBottomOf="@+id/txtSenha"
            android:layout_marginTop="30dp"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginLeft="20dp"
            android:layout_marginStart="20dp"
            android:paddingLeft="10dp"
            android:paddingRight="10dp"
            app:layout_constraintEnd_toStartOf="@+id/guideline5"
            android:layout_marginRight="20dp"
            android:layout_marginEnd="20dp"
            android:drawableStart="@drawable/ic_send_black_24dp" />

    <Button
            android:text="@string/login_register"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:drawableLeft="@drawable/ic_person_add_black_24dp"
            android:id="@+id/btRegistrar"
            android:textColor="?attr/colorBackgroundFloating"
            android:background="@drawable/roundedbutton"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/txtSenha"
            android:layout_marginTop="30dp"
            android:layout_marginRight="20dp"
            android:layout_marginEnd="20dp"
            app:layout_constraintStart_toStartOf="@+id/guideline5"
            android:layout_marginLeft="20dp"
            android:layout_marginStart="20dp"
            android:paddingLeft="10dp"
            android:paddingRight="10dp" />

    <EditText
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:inputType="textEmailAddress"
            android:drawableLeft="@drawable/ic_person_black_24dp"
            android:ems="10"
            android:id="@+id/txtEmail"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="20dp"
            android:layout_marginRight="20dp"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginLeft="20dp"
            android:layout_marginStart="20dp"
            android:hint="@string/login_name"
            android:textColorHighlight="@android:color/background_light"
            android:textColor="?attr/colorBackgroundFloating"
            android:drawablePadding="10dp"
            android:layout_marginTop="20dp"
            app:layout_constraintTop_toBottomOf="@+id/imageView2"
            android:autofillHints=""
            android:minHeight="48dp"
            android:drawableStart="@drawable/ic_person_black_24dp" />

    <EditText
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:inputType="textPassword"
            android:drawableLeft="@drawable/ic_lock_black_24dp"
            android:ems="10"
            android:id="@+id/txtSenha"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="20dp"
            android:layout_marginRight="20dp"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginLeft="20dp"
            android:layout_marginStart="20dp"
            android:hint="@string/login_password"
            android:layout_marginTop="28dp"
            app:layout_constraintTop_toBottomOf="@+id/txtEmail"
            android:textColor="?attr/colorBackgroundFloating"
            android:drawablePadding="10dp"
            android:minHeight="48dp"
            android:autofillHints=""
            android:drawableStart="@drawable/ic_lock_black_24dp" />

    <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:id="@+id/textView5"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="20dp"
            android:layout_marginRight="20dp"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginLeft="20dp"
            android:layout_marginStart="20dp"
            android:textSize="30sp"
            android:gravity="center"
            android:textColor="@android:color/background_light"
            android:text="@string/login_title"
            android:textStyle="bold"
            android:layout_marginTop="20dp"
            app:layout_constraintTop_toTopOf="parent"
            tools:ignore="TextContrastCheck" />
    <androidx.constraintlayout.widget.Guideline
            android:orientation="vertical"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" android:id="@+id/guideline5"
            app:layout_constraintGuide_percent="0.5"/>

    <ImageView
            android:src="@mipmap/ic_launcher_foreground"
            android:layout_width="200dp"
            android:layout_height="200dp"
            android:id="@+id/imageView2"
            app:layout_constraintTop_toBottomOf="@+id/textView5"
            android:layout_marginTop="20dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:contentDescription="TODO"
            tools:ignore="ImageContrastCheck" />

</androidx.constraintlayout.widget.ConstraintLayout>